fix: transcribe tool jumps

--- a/app/assets/stylesheets/components/transcribe/transcribe-tool.styl
+++ b/app/assets/stylesheets/components/transcribe/transcribe-tool.styl
@@ -22,6 +22,7 @@
         color black
         text-align left
       input
+        outline none
         width 360px
         height 40px
         font-size 1.5em
@@ -31,6 +32,7 @@
         &.input-placeholder
           color red
       textarea
+        outline none
         font-size 1.25em
         resize none
         width 400px
